--- a/tagVideo.html
+++ b/tagVideo.html
@@ -13,5 +13,7 @@ muted: esse atributo é ultilizado pois a maioria dos navegadores so dão play a
         <source src="Rotina.mp4" type="video/mp4">
         
     </video>
+
+    <h2>teste</h2>
 </body>
 </html>
