--- a/medicenter/index.html
+++ b/medicenter/index.html
@@ -6,6 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MediCenter</title>
     <link rel="stylesheet" href="../medicenter/assets/css/templete.css" />
+
+    <script type="text/javascript">
+        window.onload = function(){
+            document.querySelector(".menuMobile").addEventListener("click", function(){
+                if(document.querySelector(".menu  nav ul").style.display == 'flex') {
+                    document.querySelector(".menu  nav ul").style.display = 'none';
+                } else {
+                    document.querySelector(".menu  nav ul").style.display = 'flex';
+                }
+
+            });
+        };
+    </script>
 </head>
 
 <body>
@@ -18,6 +31,11 @@
             <div class="menu">
 
                 <nav>
+                    <div class="menuMobile">
+                        <div class="mm_line"></div>
+                        <div class="mm_line"></div>
+                        <div class="mm_line"></div>
+                    </div>
                     <ul>
                         <li class="active"><a href="">Home</a></li>
                         <li><a href="">Home</a></li>
